<resources>
  <string name="app_name">健康紀錄Personal Health Monitor</string>
  <string name="title">計算你/妳的BMI值</string>
  <string name="text1">身高(m)：</string>
  <string name="text2">體重(kg)：</string>
  <string name="text3">男性/女性：</string>

  <string name="Female">女性</string>
  <string name="Male">男性</string>
  <string name="compute">計算BMI值</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="beginButton">Click To Start</string>
</resources>
